--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".login.ui.login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,10 +33,10 @@
             android:name=".TaskManagerActivity"
             android:label="@string/title_activity_task_manager"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".login.ui.login.LoginActivity">
+            android:parentActivityName=".ui.login.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".login.ui.login.LoginActivity" />
+                android:value=".ui.login.LoginActivity" />
         </activity>
     </application>
 
