--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
         }
     }
 }
@@ -26,11 +28,14 @@ dependencies {
     implementation 'com.android.support:mediarouter-v7:28.+'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:support-annotations:28.+'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.+'
+    implementation 'android.arch.lifecycle:extensions:1.+'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'com.android.support.test:runner:1.+'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.+'
+    implementation 'com.google.android.gms:play-services:12.+'
     implementation 'com.android.support:multidex:1.+'
+    implementation 'com.google.code.gson:gson:2.+'
+    implementation 'com.mcxiaoke.volley:library:1.+'
 }
