--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <meta-data
+            android:name="br.com.sptrans.api.TOKEN"
+            android:value="edb4e2a5d365405bc2c4c647e8a6144a3fb94b0620f4fc70fed2d81ab5b9758d" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
