--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,21 +61,21 @@ dependencies {
     //implementation 'com.google.android.gms:play-services-ads:17.+'
     implementation 'com.google.android.gms:play-services-drive:17.+'
 
-    implementation 'com.google.firebase:firebase-core:16.+'
-    //implementation 'com.google.firebase:firebase-ads:17.+'
-    implementation 'com.google.firebase:firebase-analytics:16.+'
-    implementation 'com.google.firebase:firebase-appindexing:18.+'
+    implementation 'com.google.firebase:firebase-core:17.+'
+    //implementation 'com.google.firebase:firebase-ads:18.+'
+    implementation 'com.google.firebase:firebase-analytics:17.+'
+    implementation 'com.google.firebase:firebase-appindexing:19.+'
     implementation 'com.google.firebase:firebase-auth:18.+'
-    implementation 'com.google.firebase:firebase-firestore:19.+'
-    implementation 'com.google.firebase:firebase-functions:17.+'
-    implementation 'com.google.firebase:firebase-messaging:18.+'
-    implementation 'com.google.firebase:firebase-storage:17.+'
+    implementation 'com.google.firebase:firebase-firestore:20.+'
+    implementation 'com.google.firebase:firebase-functions:18.+'
+    implementation 'com.google.firebase:firebase-messaging:19.+'
+    implementation 'com.google.firebase:firebase-storage:18.+'
     implementation 'com.google.firebase:firebase-crash:16.+'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.+'
-    implementation 'com.google.firebase:firebase-dynamic-links:17.+'
+    implementation 'com.google.firebase:firebase-dynamic-links:18.+'
     implementation 'com.google.firebase:firebase-invites:17.+'
-    implementation 'com.google.firebase:firebase-inappmessaging:17.+'
-    implementation 'com.google.firebase:firebase-inappmessaging-display:17.+'
+    implementation 'com.google.firebase:firebase-inappmessaging:18.+'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:18.+'
     /*implementation 'com.google.firebase:firebase-ml-vision:20.+'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.+'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.+'
@@ -86,10 +86,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-natural-language-smart-reply-model:19.+'
     implementation 'com.google.firebase:firebase-ml-model-interpreter:19.+'
     implementation 'com.google.firebase:firebase-ml-vision-automl:16.+'*/
-    implementation 'com.google.firebase:firebase-perf:17.+'
-    implementation 'com.google.firebase:firebase-database:17.+'
-    implementation 'com.google.firebase:firebase-config:17.+'
-    implementation 'com.google.firebase:firebase-bom:18.+'
+    implementation 'com.google.firebase:firebase-perf:18.+'
+    implementation 'com.google.firebase:firebase-database:18.+'
+    implementation 'com.google.firebase:firebase-config:18.+'
+    implementation 'com.google.firebase:firebase-bom:21.+'
 
     implementation "androidx.room:room-runtime:2.+"
     implementation "androidx.room:room-rxjava2:2.+"
@@ -97,6 +97,9 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.+"
     implementation "androidx.lifecycle:lifecycle-extensions:2.+"
     androidTestImplementation "androidx.arch.core:core-testing:2.+"
+
+    implementation group: 'com.google.api', name: 'api-common', version: '1.8.+'
+    //implementation 'com.google.api-client:google-api-client:1.30.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
