--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
-    implementation 'androidx.mediarouter:mediarouter:1.0.0'
-    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.+'
+    implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.+'
+    implementation 'androidx.mediarouter:mediarouter:1.1.+'
+    implementation 'androidx.annotation:annotation:1.1.+'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.+'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     testImplementation 'junit:junit:4.+'
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.google.code.gson:gson:2.+'
     implementation 'com.mcxiaoke.volley:library:1.+'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.+'
     api 'com.google.android.material:material:1.1.0-alpha06'
     annotationProcessor 'com.android.databinding:compiler:2.+'
     implementation 'com.google.android.gms:play-services-plus:17.+'
