--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                    "room.schemaLocation":"$projectDir/schemas".toString(),
+                    "room.incremental":"true",
+                    "room.expandProjection":"true"
+                ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -25,6 +34,7 @@ android {
     dataBinding {
         enabled = true
     }
+
 }
 
 dependencies {
